--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,13 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: debugg_production
+#   username: debugg
+#   password: <%= ENV["DEBUGG_DATABASE_PASSWORD"] %>
+
+
 production:
   <<: *default
-  database: debugg_production
-  username: debugg
-  password: <%= ENV["DEBUGG_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
