--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ databases:
   - name: debug 
     databaseName: debug 
     user: debug 
+    ipAllowList: []
 
 services:
   - type: web
@@ -16,3 +17,8 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+  - type: redis
+    name: redis
+    ipAllowList: []
+    plan: free
+    maxmemoryPolicy: noeviction
